--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "dependencies": {
     "antd-mobile": "^2.2.6",
     "axios": "^0.18.0",
+    "blueimp-md5": "^2.10.0",
+    "prop-types": "15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "prop-types": "15.6.2"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -36,5 +37,5 @@
     "react-app-rewired": "^1.6.2",
     "redux-devtools-extension": "^2.13.7"
   },
-  "proxy":"http://localhost:4000"
+  "proxy": "http://localhost:5000"
 }
