完成聊天界面和信息界面的出入场动画效果

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "blueimp-md5": "^2.10.0",
     "js-cookie": "^2.2.0",
     "prop-types": "15.6.2",
+    "rc-queue-anim": "^1.6.8",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
